--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body id="body">
     
     <input type="text" id="input-el">
     <button id="input-btn">SAVE INPUT</button>
+    <button id="reset">RESET</button> 
     <ul id="ul-el"></ul>
-    <p id="dis"></p> 
-
     <script src="index.js"></script>
 </body>
 </html>
