--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     
     <input type="text" id="input-el">
     <button id="input-btn">SAVE INPUT</button>
+    <button id="savetab">Save Tab</button>
     <button id="reset">RESET</button> 
     <ul id="ul-el"></ul>
     <script src="index.js"></script>
